# nuqe

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  callgrind.out.17772  callgrind.out.23729  cmake_install.cmake  foo  foo_pg  gmon.out  m  massif.27853.ps  massif.27853.txt  massif.7699.ps  massif.7699.txt  prof_log  prof_log_old_contraction  prof_script  prof_script~  readme.txt  val.ps  valgrind.txt
helper/: april07_baseline_rgen610.6_flux_8gev.root  flux_1200.root  flux_300.root  flux_500.root  flux_5000.root  flux_800.root  make_flux.C  make_flux.C~  make_flux_C.d  p_dist_look.C  p_dist_look.C~  p_dists.root
misc/: init_histo_look.C  look.C  ma_compare.C  make_plots  may09_ma_compare.C  prof_log  ratios.C  validate.C
old/: FH.C  FH.h  TT_class.C  TT_class.C~  TT_class.h~  TT_event_old.C  TT_generator2.C  TT_generator2.C~  TT_generator2.h  TT_generator2.h~  TT_param_class.h  TT_surface.C  TT_surface.C~  TT_surface.h  TT_surface.h~  TU_class.C  TU_class.C~  TU_class.h  TU_class.h~  TV_class.C  TV_class.C~  TV_class.h~  compare_plots.C  compare_plots.C~  draw.C~  epsilon.C  epsilon.C~  foo.C  foo.C1  foo.C2  foo_old.C  foo_old.C~  functions.C  functions.C~  functions.h~  m  minuit_stuff  minuit_stuff~  m~
plots/: Q2_SM.root  c1.eps  w_cut.eps  w_no_cut.eps
r2h/: chbook-example_ted  chbook-example_ted.c  chbook-example_ted.sh  hbook-ntuple_ted  hbook-ntuple_ted.C  hbook-ntuple_ted.c  hbook-ntuple_ted.sh
src/: TT_drawer.C  TT_drawer.C~  TT_drawer.h  TT_drawer.h~  TT_event.C  TT_event.C~  TT_event.h  TT_event.h~  TT_generator.C  TT_generator.C~  foo.C  (+10 more)
(+145 files in other folders)
